--- a/styles/style.css
+++ b/styles/style.css
@@ -177,9 +177,6 @@ nav{
     text-align: center;
     margin: 50px 0;
 }
-.imeges img{
-    width: 370px;
-}
 .ourteam{
     background-color: #f4f4fd;
     height: 732px;
@@ -214,23 +211,14 @@ nav{
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    /* background-color: white;
-    fill: #afb1b8; */
-    background: #4D5AE5;
-    color: #F4F4FD;
+    background-color: white;
     transition: all 0.3s ease;
+    fill: #AFB1B8;
 }
 .photo a:hover{
     background-color: #2196F3;
-    /* fill: white; */
+    fill: white;
 }
-
-.photo svg{
-    fill: #F4F4FD;
-    /* width: 20px;
-    height: 20px; */
-}
-
 .team li{
     list-style-type: none;
 }
@@ -305,17 +293,15 @@ nav{
     width: 170px;
     height: 92px;
 }
-footer {
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:#2F303A ;
+footer{
+    background-color:#2F303A;
 }
 .foot{
     height: 312px;
     display: flex;
     align-items: center; 
     gap: 70px;
+    margin-left: 200px;
 }
 .address1 a{
     text-decoration: none;
